    . Make the callback-leak warning configurable
    . Make MozRepl::RemoteObject::Instance::DESTROY just
      queue the id, and have MozRepl::RemoteObject call
      repl.breakLink() with just the ids, reducing traffic
    . Automatically load the AnyEvent backend if needed.
    . Implement ->can() for MozRepl objects

0.30 20120316
    ! Fix a destructor clobbering $@ indirectly
      This led to $@ being empty even though an exception was thrown.
0.29 20111222
    . This version is mostly a cleanup version with clearer failure
      diagnostics. If MozRepl::RemoteObject is currently working for you,
      there is no need to upgrade.    + The module is now tested with
        Firefox 3.0.9
        Firefox 3.5.x
        Firefox 4.0.1
        Firefox 5
        Firefox 6.0.1
        Firefox 7.0.1
        Firefox 8
        Firefox 9
    . Firefox 8 onwards need a very recent version of the mozrepl Add-on,
      for example 1.1.0 available from
        https://github.com/bard/mozrepl/tags
      Older versions will not work due to "script caching" in Firefox
      that prevents the repl from ever returning anything but the first result.
      If you are upgrading Firefox to version 8 or later, you will see failure
      symptoms like
      
        Transport still not UTF-8 safe: "8.0!"?!? 
0.28 20110923
    + Switch to "multiline" input mode.
    
      This should eliminate the "no result yet from mozrepl"
      warnings and make input/response somewhat better.
    . Fix a buglet in the memleak test
    ! Function generation using ->expr() needs the following
      idiom to work with Firefox 6+:
          f=function() {
            ...
          }; f
      Ideally, use ->declare() to declare functions.
    + The module is now tested with
        Firefox 3.0.9
        Firefox 3.5.x
        Firefox 4.0.1
        Firefox 5
        Firefox 6.0.1
        Firefox 7 Beta 5

0.27 20110726
    + The module is now tested with
        Firefox 3.0.9
        Firefox 3.5.x